tests/rosetta/out/Kotlin/active-directory-search-for-a-user.error
kotlinc: exit status 1
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/tmp/active-directory-search-for-a-user.kt:11:12: error: type mismatch: inferred type is MutableList<String>? but MutableList<String> was expected
    return directory[username]
           ^
