tests/rosetta/out/Kotlin/active-directory-search-for-a-user.kt
// Generated by Mochi compiler v0.10.28 on 2006-01-02T15:04:05Z
// Code generated from active-directory-search-for-a-user.mochi

/**
 * Auto-generated from Mochi
 * @param directory MutableMap<String, MutableList<String>>
 * @param username String
 * @return MutableList<String>
 */
fun search_user(directory: MutableMap<String, MutableList<String>>, username: String): MutableList<String> {
    return directory[username]
}

/**
 * Auto-generated from Mochi
 */
fun main(): Unit {
    val client = mutableMapOf("Base" to "dc=example,dc=com", "Host" to "ldap.example.com", "Port" to 389, "GroupFilter" to "(memberUid=%s)")
    val directory = mutableMapOf("username" to (mutableListOf("admins", "users")), "john" to (mutableListOf("users")))
    val groups = search_user(directory, "username")
    if (groups.size > 0) {
        var out = "Groups: ["
        var i = 0
        while (i < groups.size) {
            out = out + "\"" + groups[i] + "\""
            if (i < groups.size - 1) {
                out = out + ", "
            }
            i = i + 1
        }
        out = out + "]"
        println(out)
    }
    else {
        println("User not found")
    }
}

